<resources>

    <string name="can_update">可更新</string>
    <string name="update_detail">修改记录</string>
    <string name="update_immediately">立即更新</string>
    <string name="update_later">暂不更新</string>
    <string name="space_insufficient">存储空间不足，请清理空后再试</string>
    <string name="network_exception">网络异常，请检查您的网络是否已连接</string>
    <string name="fileMd5_exception">安装文件md5校验失败</string>
    <string name="dialog_title">提示</string>
    <string name="dialog_message">更新失败，请检查您的网络是否正常</string>
    <string name="dialog_retry">重新更新</string>
    <string name="dialog_next_time">下次再说</string>
    <string name="connecting">正在连接</string>
    <string name="downloading">正在下载</string>

</resources>
